--- a/FireEmblemExplains/statMech.html
+++ b/FireEmblemExplains/statMech.html
@@ -18,6 +18,23 @@
   <h3>Introduction</h3>
   <dl>
     <dt class="cecilia_talks">Cecilia</dt>
+      <dd>Good day, Kiran. Are you ready to learn about <dfn>Thermodynamics</dfn> and <dfn>Statistical Mechanics</dfn>? Great! Then let's begin.</dd>
+  </dl>
+</div>
+
+<div id="thermo_div" class="main">
+  <h3>Thermodynamics</h3>
+  <dl>
+    <dt class="cecilia_talks">Cecilia</dt>
+      <dd>In thermodynamics, we're interested in energy and heat flow of a system. A <dfn>system</dfn> is just a collection of &ldquo;things&rdquo; that we're interested in&mdash;a chunk of material, multiple chunks of the same material, multiple materials, gases or liquids, magnets&hellip; it could be anything, really. And collectively, this system has some properties that we're interested in&mdash;things like internal energy, pressure, and temperature.</dd>
+      <dd></dd>
+  </dl>
+</div>
+
+<!--div id="intro_div" class="main">
+  <h3>Introduction</h3>
+  <dl>
+    <dt class="cecilia_talks">Cecilia</dt>
       <dd>Good day, Kiran. Are you ready to learn about <dfn>Thermodynamics</dfn> and <dfn>Statistical Mechanics</dfn>?</dd>
     <dt class="virion_talks">Virion</dt>
       <dd>Oh, my fair Lady Cecilia. How dazzling you look today!</dd>
@@ -41,7 +58,12 @@
       <dd>Let us start by defining <dfn>equilibrium</dfn>. We say that a system is in equilibrium after we let it sit for a long time, isolated from anything outside the system. Shielding the system from its onlookers' raucous provocations, we allow it to reveal its true splendor!</dd>
     <dt class="cecilia_talks">Cecilia</dt>
       <dd>Virion has quite the way of expressing it, but he's correct in concept. Now, what would we expect such a system to do? Oh, you look confused, Kiran. I suppose this is all very abstract. We could mean almost anything by the word "system." </dd>
+    <dt class="boey_talks">Boey</dt>
+      <dd style="color: red"><b>TODO: This should be Boey. That'd probably be easier to write than Virion. Or maybe someone else. Boey can be reserved for learning how to wield Big Hurty Lightning from Robin teaching E&amp;M.</b></dd>
+    <dt class="cecilia_talks">Cecilia</dt>
+      <dd>We should talk about the <dfn>state</dfn> of a system. We can think of it as a collection of variables that describe everything that we want to know about a system right now. But that's the catch&mdash;<em>we</em> get to choose what variables these are. In statistical mechanics, for example, we might have a position and momentum for every single particle in our system. That's what we might call a <em>microstate</em>, because it's looking up close at all the details of the system. But we also tend not to care about these tiny details&mdash;indeed, historically, we didn't even know about what was going on at a microscopic level. But we could still measure macroscopic properties, giving us <dfn>macrostate</dfn>. So we might have a gas, for example, with a particular temperature, volume, pressure, or entropy. But these things are not all independent.</dd>
   </dl>
+</div-->
 
 </body>
 </html>
